more css. more bugs squashed

--- a/frontend/src/components/Locations/Location.css
+++ b/frontend/src/components/Locations/Location.css
@@ -28,14 +28,26 @@
     align-items: center;
     padding: 3px;
     width: 250px;
+    height: 52px;
     position: absolute;
     top: 0;
+    box-sizing: border-box;
     background-color: rgb(36, 36, 36);
 }
 
 .navButton{
     width: 40px;
     height: 40px;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 10px;
+    box-sizing: border-box;
+    border: 1px solid rgba(255,255,255,0);
+}
+
+.navButton:hover{
+    background-color: rgb(58, 58, 58);
+    border: 1px solid rgb(128, 128, 128);
 }
 
 .sideBar{
@@ -66,7 +78,7 @@
 
 
 .locationsList{
-    margin-top: 50px;
+    margin-top: 55px;
     margin-left: 10px;
     background-color: rgb(85, 85, 85);
     height: 85vh;
